--- a/server/js/views/pages/index.ejs
+++ b/server/js/views/pages/index.ejs
@@ -1144,6 +1144,6 @@
 		</script>
 		<![endif]-->
         <!-- <script src="https://www.volkswagen.nl/dist/vw-pkw/js/scripts.min.js"></script> -->
-        <script src="js/index.js"></script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
