change some styles

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -588,7 +588,7 @@
  }
  
  .o-block {
-     position: relative
+     position: relative;
  }
  
  .o-row,
@@ -602,7 +602,6 @@
      -webkit-justify-content: center;
      -ms-flex-pack: center;
      justify-content: center;
-     position: relative;
      width: 100%;
      margin: 0 auto
  }
@@ -1169,6 +1168,17 @@
      height: 6em;
      vertical-align: -1.6em
  }
+
+ .image-wrapper {
+    max-height: 45vh;
+ }
+ 
+ .image-wrapper img {
+    object-fit: cover;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+ }
  
  img {
      display: inline-block;
@@ -1214,7 +1224,7 @@
  }
  
  a {
-     color: #00b1eb;
+     color: #0851C5;
      cursor: pointer;
      transition: background-color .2s ease-in-out, color .2s ease-in-out
  }
@@ -1651,7 +1661,7 @@
  
  .c-button--primary {
      background-color: #00b1eb;
-     color: #fff
+     color: #1A1A1A;
  }
  
  .c-button--primary.is-current,
@@ -1660,7 +1670,7 @@
  .m-action-card-module.is-current .c-button--primary,
  .m-action-card-module:focus .c-button--primary,
  .m-action-card-module:hover .c-button--primary {
-     background-color: #009fd4
+     background-color: #69cdee
  }
  
  .c-button--primary-alt {
@@ -1787,7 +1797,7 @@
  }
  
  .c-contact-option__body {
-     padding-left: 3.75rem
+     padding-left: 3.75rem;
  }
  
  @media screen and (min-width:58em) {
@@ -1947,7 +1957,7 @@
      line-height: 1.5;
      font-size: 1rem;
      font-weight: 700;
-     color: #fff
+     color: #fff;
  }
  
  @media screen and (min-width:38em) {
@@ -2988,6 +2998,12 @@
      flex-wrap: wrap
  }
  
+.m-button-group__buttons .c-button:focus,
+.m-button-group__buttons .c-button:hover{
+    font-size: 1.05em;
+    color: #0851C5;
+}
+
  @media screen and (min-width:38em) {
      .m-button-group--grid-variant .m-button-group__buttons {
          -webkit-justify-content: center;
@@ -3038,7 +3054,7 @@
  
  @media screen and (min-width:48em) {
      .m-button-group--grid-variant .m-button-group__button {
-         width: 25%
+         width: 20%
      }
  
      .m-button-group--grid-variant .m-button-group__button:not(:last-child) {
@@ -4706,6 +4722,16 @@
  .m-teaser__video,
  .m-tile {
      width: 100%
+ }
+
+ .m-tile__anchor:focus,
+ .m-tile__anchor:hover {
+     transform: scale(1.05);
+ }
+
+ .m-tile__content:focus,
+ .m-tile__content:hover {
+     color: #6cc9e7;
  }
  
  .m-tile {
@@ -8255,7 +8281,7 @@
  .footer-meta-block__meta-nav-link:last-child {
      width: 100%;
      margin: 1em 0;
-     color: #becdd3;
+     color: #0851C5;
      text-align: center
  }
  
@@ -8272,7 +8298,7 @@
  
  .footer-meta-block__meta-nav-link:focus,
  .footer-meta-block__meta-nav-link:hover {
-     color: #00b1eb
+     color: #00b1eb;
  }
  
  .footer-nav-block {
@@ -8945,13 +8971,13 @@
  
  .header-block__menu-button:hover,
  .header-block__secondary-navigation-link:hover {
-     color: #00b1eb
+    color: #0851C5;
  }
  
  .header-block__menu-button .o-icon,
  .header-block__secondary-navigation-link .o-icon {
      margin-right: .5em;
-     fill: #00b1eb
+     fill: #0851C5;
  }
  
  @media screen and (max-width:57.9375em) {
@@ -9049,9 +9075,11 @@
  
  .header-block__primary-navigation-link.is-current,
  .header-block__primary-navigation-link:hover,
+ .header-block__primary-navigation-link:focus,
  .header-block__secondary-navigation-link.is-current,
- .header-block__secondary-navigation-link:hover {
-     color: #00b1eb
+ .header-block__secondary-navigation-link:hover,
+ .header-block__secondary-navigation-link:focus {
+     color: #0851C5;
  }
  
  .header-block__primary-navigation {
@@ -9336,7 +9364,7 @@
      -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
      transform: translateX(-50%);
-     z-index: 1;
+     z-index: 2;
      top: 0;
      width: 100%;
      height: 100%;
@@ -9765,7 +9793,7 @@
  html:not(.is-in-experience-editor) .hero-block__button,
  html:not(.is-in-experience-editor) .hero-block__heading-group>*,
  html:not(.is-in-experience-editor) .hero-block__more-link {
-     opacity: 0
+     opacity: 1
  }
  
  .highlighted-subjects-block {
