--- a/server/js/views/pages/index.ejs
+++ b/server/js/views/pages/index.ejs
@@ -42,7 +42,7 @@
                             <a href="/zakelijk" class="header-block__primary-navigation-link js-track-click">
                                 <span>Zakelijk</span>
                             </a>
-                            <a href="/acties" class="header-block__primary-navigation-link js-track-click">
+                            <!-- <a href="/acties" class="header-block__primary-navigation-link js-track-click">
                                 <span>Acties</span>
                             </a>
                             <a href="/financial-services" class="header-block__primary-navigation-link js-track-click">
@@ -50,7 +50,7 @@
                             </a>
                             <a href="/stories" class="header-block__primary-navigation-link js-track-click" target=_blank>
                                 <span>Stories</span>
-                            </a>
+                            </a> -->
                             <a href="/contact" class="header-block__primary-navigation-link js-track-click">
                                 <span>Contact</span>
                             </a>
@@ -83,7 +83,7 @@
                             <a href="/zakelijk" class="header-block__primary-navigation-link js-track-click">
                                 <span>Zakelijk</span>
                             </a>
-                            <a href="/acties" class="header-block__primary-navigation-link js-track-click">
+                            <!-- <a href="/acties" class="header-block__primary-navigation-link js-track-click">
                                 <span>Acties</span>
                             </a>
                             <a href="/financial-services" class="header-block__primary-navigation-link js-track-click">
@@ -91,7 +91,7 @@
                             </a>
                             <a href="/stories" class="header-block__primary-navigation-link js-track-click" target=_blank>
                                 <span>Stories</span>
-                            </a>
+                            </a> -->
                             <a href="/contact" class="header-block__primary-navigation-link js-track-click">
                                 <span>Contact</span>
                             </a>
@@ -193,9 +193,9 @@
                                 </div>
                                 <a href="/service/economy-service" class="c-button hero-block__button js-hero-block__button js-track-click c-button--primary">
                                     <span>Ontdek meer</span>
-                                    <svg class="o-icon" aria-hidden="true">
+                                    <!-- <svg class="o-icon" aria-hidden="true">
                                         <use xlink:href="/dist/vw-pkw/Icons/icons.svg#chevron-right-oval"></use>
-                                    </svg>
+                                    </svg> -->
                                 </a>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                             <nav class="m-button-group__buttons">
                                 <a href="/modellen" class="c-button c-button--default m-button-group__button js-m-button-group__button js-track-click">
                                     <svg class="o-icon" aria-hidden="true">
-                                        <use xlink:href="/dist/vw-pkw/Icons/icons.svg#models"></use>
+                                        <use xlink:href="https://image.flaticon.com/icons/svg/66/66906.svg"></use>
                                     </svg>
                                     <span>Modellen</span>
                                 </a>
@@ -483,11 +483,11 @@
                                 <p>Heb je een brief van ons ontvangen?</p>
                             </div>
                             <div class="m-cta-module__button-wrapper">
-                                <a href="/terugroepactie" class="c-button c-button--primary js-track-click m-cta-module__button">
+                                <a href="/terugroepactie" class="c-button c-button--primary js-track-click m-cta-module__button" aria-label="Terugroepactie EA189 dieselmotoren">
                                     <span>Lees meer</span>
-                                    <svg class="o-icon" aria-hidden="true">
+                                    <!-- <svg class="o-icon" aria-hidden="true">
                                         <use xlink:href="/dist/vw-pkw/Icons/icons.svg#chevron-right-oval"></use>
-                                    </svg>
+                                    </svg> -->
                                 </a>
                             </div>
                         </div>
