--- a/server/js/views/components/head.ejs
+++ b/server/js/views/components/head.ejs
@@ -214,10 +214,11 @@ if (permissioncookievalue == 'PERSONAL') {
 <link rel="icon" type="image/png" href="/dist/VW-PKW/favicon-16x16.png" sizes="16x16"> -->
 <!-- <link rel="manifest" href="/dist/VW-PKW/manifest.json"> -->
 <link rel="mask-icon" href="/dist/VW-PKW/safari-pinned-tab.svg" color="#0057a7">
-<link rel="shortcut icon" href="/dist/VW-PKW/favicon.ico">
+<link rel="shortcut icon" href="https://www.volkswagen.nl/dist/VW-PKW/favicon.ico">
 <meta name="msapplication-TileColor" content="#0057a7">
 <meta name="msapplication-TileImage" content="/dist/VW-PKW/mstile-144x144.png">
 <meta name="msapplication-config" content="/dist/VW-PKW/browserconfig.xml">
+<link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#0057a7">
 <!-- <script type="application/ld+json">
 	{
