update styles and readme

--- a/server/js/views/pages/index.ejs
+++ b/server/js/views/pages/index.ejs
@@ -208,7 +208,7 @@
                     <img  
                         width="507"
                         height="500"
-                        style="background-color:#00b1eb" 
+                        style="background-color:#2A545C" 
                         data-srcset="https://stocklandmartelblog.files.wordpress.com/2015/05/uwe-duettmann_volkswagen-3.jpg" 
                         srcset="https://stocklandmartelblog.files.wordpress.com/2015/05/uwe-duettmann_volkswagen-3.jpg" 
                         alt="Volkswagen Economy Service" 
@@ -260,7 +260,7 @@
                                 <div class="m-tile">
                                     <a href="/acties/business" class="m-tile__anchor">
                                         <img  
-                                            style="background-color:#00b1eb" 
+                                            style="background-color:#2A545C" 
                                             data-src="https://www.volkswagen.nl/-/media/vwpkw/images/acties/fast-start-2019/fast_start_2400x1350.ashx" 
                                             sizes="100vw"
                                             data-srcset="https://www.volkswagen.nl/-/media/vwpkw/images/acties/fast-start-2019/fast_start_2400x1350.ashx" 
@@ -294,7 +294,7 @@
                                 <div class="m-tile">
                                     <a href="https://www.vwbedrijfswagens.nl/nl/ontdek-en-koop/acties.html" class="m-tile__anchor" target=_blank>
                                         <img  
-                                            style="background-color:#00b1eb" 
+                                            style="background-color:#2A545C" 
                                             data-src="https://www.volkswagen.nl/-/media/vwpkw/images/homepage/tile-module/1200x1200-vwnl-verschil-moet-er-zijn.ashx" 
                                             sizes="100vw"
                                             data-srcset="" 
@@ -325,7 +325,7 @@
                                 <div class="m-tile">
                                     <a href="/snelwegsprookjes" class="m-tile__anchor" target=_blank>
                                         <img  
-                                            style="background-color:#00b1eb"
+                                            style="background-color:#2A545C"
                                             data-src="https://www.volkswagen.nl/-/media/vwpkw/images/snelwegsprookjes/snelwegsprookjes_thumbnail.ashx" 
                                             sizes="100vw"
                                             data-srcset="https://www.volkswagen.nl/-/media/vwpkw/images/snelwegsprookjes/snelwegsprookjes_thumbnail.ashx" 
@@ -360,7 +360,7 @@
                                 <div class="m-tile">
                                     <a href="/passat-2019" class="m-tile__anchor">
                                         <img  
-                                            style="background-color:#00b1eb" 
+                                            style="background-color:#2A545C" 
                                             data-src="https://www.volkswagen.nl/-/media/vwpkw/images/modellen/passat/passat_tile.ashx" 
                                             sizes="100vw"
                                             data-srcset="https://www.volkswagen.nl/-/media/vwpkw/images/modellen/passat/passat_tile.ashx" 
@@ -391,7 +391,7 @@
                                 <div class="m-tile">
                                     <a href="/elektrisch-rijden" class="m-tile__anchor">
                                         <img  
-                                            style="background-color:#00b1eb" 
+                                            style="background-color:#2A545C" 
                                             data-src="https://www.volkswagen.nl/-/media/vwpkw/images/homepage/tile-module/elektrisch-rijden-11.ashx" 
                                             sizes="100vw"
                                             data-srcset="https://www.volkswagen.nl/-/media/vwpkw/images/homepage/tile-module/elektrisch-rijden-11.ashx" 
@@ -425,7 +425,7 @@
                                 <div class="m-tile">
                                     <a href="http://www.volkswagen.nl/nieuws/volkswagen-golf-wordt-45-ruim-35-miljoen-golfs-and-still-counting/" class="m-tile__anchor" target=_new>
                                         <img  
-                                            style="background-color:#00b1eb" 
+                                            style="background-color:#2A545C" 
                                             data-src="https://presspage-production-content.s3.amazonaws.com/uploads/1397/500_golf1-536821.jpg?10000" 
                                             sizes="100vw"
                                             data-srcset="https://presspage-production-content.s3.amazonaws.com/uploads/1397/500_golf1-536821.jpg?10000" 
